fix(jvm): self-review findings; AC6.3 over the bundled r14 rules; JVM_FLAGS == RULE_FLAGS
Review M1: a diagnostic bean that can't find MaxHeapSize gives no facts. L1: inject/reset never leave a stale report.
L2: JvmService only ensures a probe started (no timeout copies per tick). L3: a failed probe keeps version/vendor with
the check off. L4: server-set notes also list -Xms, AlwaysPreTouch, DisableExplicitGC; reason says 'or a set based on
them'. L5: -XX:Flags/VMOptionsFile never checked. L6: version without build/opt ('25.0.3'). L9: knownFlag reverted.
L10: JvmFinding guard test. L11/WS-R handoffs: JvmScenarioTest on the bundled rules only (fixture removed), legacy
evaluator never fires a jvm condition, SchemaConsistencyTest jvmFlags == JvmFacts.RULE_FLAGS, KnowledgeV2ScenarioTest's
jvm tripwire replaced. L12: JvmGameTest requires the bundled jvm-ignored-flags.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01BzjDikL2wqunaSiMjefimU